# privacy-analysis-research

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  Makefile  Project-Dashboard.html  README.md  pyproject.toml  requirements.txt
data/raw/baseline/: run_1.json  run_2.json  run_3.json
data/raw/grammarly/: run_1.json  run_2.json  run_3.json  run_4.json  run_5.json
data/raw/grammarly_demo/: run_1.json
data/raw/languagetool/: run_1.json  run_2.json  run_3.json  run_4.json  run_5.json
docs/: Capture-Protocol.md  Code-and-Files-Guide.md  ENVIRONMENT.md  Engineering-Architecture-Review-2026-05-28.md  Independent-Critical-Review-2026-05-28.md  Meeting-Notes-2026-07-23.md  Metrics-Definition.md  Narrative-Walkthrough.md  New-Chat-Starter-Prompt.md  Operational-Prompts.md  Professor-Update-Email.md  Project-Overview.md  QA-Professor.md  Related-Work-Research.md  Reproduction-Guide.md  Setup-Guide.md  Technical-Walkthrough.md  Timeline.md  WALKTHROUGH.md
input-data/: README.md  test-document.txt  test-page.html
presentation/: Progress-Review.pptx  build_deck.js
report/: log1.txt  log2.txt  log3.txt  logbib.txt  main.tex  refs.bib
results/: baseline_summary.json  grammarly_demo_summary.json  grammarly_summary.json  languagetool_summary.json  prowritingaid_summary.json  wordtune_summary.json
scripts/analysis/: analyze.py
scripts/capture/: capture_addon.py  run_capture.sh
skills/privacy-analysis-project/: SKILL.md  future-skills.md  gotchas.md  interpretation.md  methodology.md  protocol.md
tests/: test_analyze.py  test_matching.py
